k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ci-simple-app
  name: ci-simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ci-simple-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ci-simple-app
    spec:
      containers:
      - image: ngurahbagustrisna/ci-tes:${GITHUB_SHA}
        name: ci-test
        resources: {}
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
status: {}
