k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ci-simple-app
  name: ci-simple-app
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: ci-simple-app
  type: ClusterIP
status:
  loadBalancer: {}
